--- a/src/NominaSoft.UI/Views/Shared/_MasterView.cshtml
+++ b/src/NominaSoft.UI/Views/Shared/_MasterView.cshtml
@@ -9,6 +9,8 @@
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="~/vendors/base/vendor.bundle.base.css">
+    <!-- SweetAlert2 -->
+    <!-- <link rel="stylesheet" href="~/sweetalert2/dist/sweetalert2.min.css" /> -->
     <!-- endinject -->
     <!-- plugin css for this page -->
     <!-- End plugin css for this page -->
@@ -98,6 +100,9 @@
         <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
+    <!-- SweetAlert v2.0 -->
+    <!-- <script src="~/sweetalert2/dist/sweetalert2.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <!-- plugins:js -->
     <script src="~/vendors/base/vendor.bundle.base.js"></script>
     <!-- endinject -->
@@ -112,12 +117,6 @@
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="~/js/dashboard.js"></script>
-    <!-- SweetAlert v2.0 -->
-    <!--
-    <script src="~/js/sweetalert2.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
-    -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <!-- End custom js for this page-->
 </body>
 
