--- a/src/NominaSoft.UI/Views/Shared/_MasterView.cshtml
+++ b/src/NominaSoft.UI/Views/Shared/_MasterView.cshtml
@@ -103,6 +103,7 @@
     <!-- SweetAlert v2.0 -->
     <!-- <script src="~/sweetalert2/dist/sweetalert2.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <!--<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>-->
     <!-- plugins:js -->
     <script src="~/vendors/base/vendor.bundle.base.js"></script>
     <!-- endinject -->
